Fix for overflow animation to keep responsivness and makes files pretty

--- a/src/components/AboutContent/AboutContent.scss
+++ b/src/components/AboutContent/AboutContent.scss
@@ -124,6 +124,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   padding: 120px 0;
+  overflow-x: hidden;
   .about-diagnosis-content-container {
     h2 {
       padding-bottom: 16px;
@@ -139,6 +140,7 @@
     opacity: 0;
     transition: transform, opacity;
     transition-duration: .3s, .3s;
+    overflow-x: hidden;
     &.active-card {
       margin: 0;
       transform: translateX(0);
@@ -147,6 +149,7 @@
       transition-delay: .7s, .7s;
       transition-duration: .7s, .7s;
       transform-origin: bottom;
+      overflow-x: hidden;
     }
     p {
       padding-bottom: 16px;
